--- a/rust_implementation/Cargo.toml
+++ b/rust_implementation/Cargo.toml
@@ -7,12 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = { version="0.7", features=["small_rng"] }
+rand = { version = "0.7", features = [ "small_rng" ] }
 rand_distr = "0.2"
 ordered-float = "1.0"
 
 itertools = "0.8.2"
-structopt = "0.3"       #args
+structopt = "0.3"
 
 enum-map = "0.6.2"
 either = "1.5.3"
+
+[[test]]
+name = "precision"
+path = "src/precision_test.rs"
