--- a/shoeshine_shop/Cargo.toml
+++ b/shoeshine_shop/Cargo.toml
@@ -11,7 +11,11 @@ rand = { version = "0.7.3", features = [ "small_rng" ] }
 rand_distr = "0.2.2"
 ordered-float = "1.0.2"
 
-itertools = "0.8.2"
+itertools = "0.9.0"
 
 enum-map = "0.6.2"
 either = "1.5.3"
+
+#optimizations
+staticvec = "0.9.2"
+arraydeque = "0.4"
